# Simple-AES-Encryption-Cli-Tool

./: .gitignore  Cargo.toml  README.md  aes.key  generate_random_files.sh  t.txt
src/: ecb.rs  lib.rs  main.rs
src/tests/: mod.rs
tests/: mod.rs
