[package]
name = "cipher_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
colored = "3.0.0"
dialoguer = "0.11.0"
hex = "0.4.3"
memmap2 = "0.9.5"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.138"
spinners = "4.1.1"


[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
